cleaning and adding reference

--- a/bb.bib
+++ b/bb.bib
@@ -1,3 +1,21 @@
+@misc{u22003,
+author = {{Demographic Data Base}},
+institution = {CEDAR},
+address = {Umeå University},
+year = {2022},
+title = {U22003},
+note = {doi: https://dx.doi.org/10.17197/U22003}
+}
+
+@article{knoki77,
+author = {Knodel, J. and Kintner, H.},
+title = {The Impact of Breast Feeding Patterns on the Biometric Analysis of Infant Mortality},
+journal = {Demography},
+volume = {14},
+year = {1977},
+pages = {391--409}
+}
+
 @book{ccr01,
 author = {Crowder, M.J.},
 title = {Classical Competing Risks},
