--- a/bb.bib
+++ b/bb.bib
@@ -1,3 +1,12 @@
+@misc{sedd,
+author = {Bengtsson, T. and Dribe,  M. and Quaranta, L. and Svensson, P.},
+year = {2021},
+title = {The {S}canian Economic Demographic Database, version 4.0 
+(machine-readable database)},
+note = {Centre for Economic Demography, Lund University},
+address = {Lund University}
+}
+
 @misc{u22003,
 author = {{Demographic Data Base}},
 institution = {CEDAR},
@@ -174,3 +183,12 @@ title = {The population history of {E}ngland 1541--1871: {A} reconstruction},
 publisher = {Edward Arnold},
 address = {London}
 }
+
+@Manual{cran,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2022},
+    url = {https://www.R-project.org/},
+  }
