--- a/Slides/slides.Rmd
+++ b/Slides/slides.Rmd
@@ -12,7 +12,7 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, message = FALSE, fig.width = 11, warning = FALSE, comment = NA)
+knitr::opts_chunk$set(echo = FALSE, message = FALSE, fig.width = 9, warning = FALSE, comment = NA)
 
 library(eha)
 par(cex.axis = 1.2)
@@ -25,6 +25,27 @@ par(cex.axis = 1.2)
 *   Theoretical considerations
 *   Real-world examples.
 
+## The log-cube transform
+
+\begin{columns}
+\begin{column}{0.6\textwidth}
+\begin{equation*}
+g(t) = C \log^3(t + 1), \; 0 < t \le 365.
+\end{equation*}
+
+where $C$ is a normalizing constant:
+
+\begin{equation*}
+C = \frac{365}{\log^3(365 + 1)}
+\end{equation*}
+\end{column}
+
+\begin{column}{0.5\textwidth}
+\includegraphics[width=0.9\textwidth]{../paper2_files/figure-latex/logcube-1.pdf}
+\end{column}
+
+\end{columns}
+
 ## Earlier work 
 
 *   Knodel \& Kintner (1977) 
@@ -33,11 +54,25 @@ par(cex.axis = 1.2)
 *   Bengtsson (1999).
 *   Manfredini (2004).
 
-## Study area 1: Västerbotten 1861--1950
+
+## Study areas
+
+\begin{columns}
+\begin{column}{0.5\textwidth}
+\begin{center}
+Skåne 1711--1800
+
+\includegraphics[width=0.7\textwidth]{myfigs/scania.png}
+\end{center}
+\end{column}
+\begin{column}{0.5\textwidth}
+\begin{center}
+Västerbotten 1801--1950
 
 \includegraphics[width=0.8\textwidth]{myfigs/vb.png}
-
-
+\end{center}
+\end{column}
+\end{columns}
 
 ## Conclusions
 
